<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:stretchColumns="1">

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_column="1"
            android:gravity="end"
            android:textSize="25sp"
            android:text="@string/username" />

        <EditText
            android:id="@+id/etUserName"
            android:width="200dp"
            android:textSize="25sp"/>

    </TableRow>

    <TableRow>

    <TextView
        android:layout_width="wrap_content"
        android:layout_column="1"
        android:gravity="end"
        android:textSize="25sp"
        android:text="@string/time"/>

    <TextView
        android:layout_width="wrap_content"
        android:gravity="end"
        android:id="@+id/tvWinTime"
        android:textSize="25sp"/>

    </TableRow>


    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_column="1"
            android:gravity="end"
            android:text="@string/lblUserIcon"
            android:textSize="25sp" />

        <Spinner
            android:id="@+id/spnrUserIcon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="25sp"
            android:gravity="center"/>
    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/btnCreateResult"
            android:layout_width="wrap_content"
            android:layout_column="1"
            android:gravity="end"
            android:textSize="15sp"
            android:text="@string/btnOk" />

        <Button
            android:id="@+id/btnCancelCreateResult"
            android:layout_width="wrap_content"
            android:gravity="left"
            android:textSize="15sp"
            android:text="@string/btnCancel" />

    </TableRow>

</TableLayout>