<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/backround"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="false"
        android:alpha="0.7"
        android:background="@drawable/backround"
        android:contentDescription="@string/backround_6line"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mainText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="@font/sonsie_one"
        android:text="@string/mainText"
        android:textColor="#FFFF"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/btnStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@drawable/main_custombutton"
        android:text="@string/btn_start"
        android:layout_margin="10dp"
        android:textColor="#FFFF"
        app:layout_constraintBottom_toTopOf="@+id/btnHighScore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:alpha="2"/>

    <Button
        android:textColor="#FFFF"
        android:id="@+id/btnHighScore"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_highscore"
        android:layout_margin="10dp"
        android:background="@drawable/main_custombutton"
        app:layout_constraintBottom_toTopOf="@+id/btnAbout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStart"
        android:alpha="2"/>

    <Button
        android:id="@+id/btnAbout"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@drawable/main_custombutton"
        android:textColor="#FFFF"
        android:layout_margin="10dp"
        android:text="@string/btn_about"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnHighScore"
        android:alpha="2"/>

</androidx.constraintlayout.widget.ConstraintLayout>