<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="#000">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="180sp"
        android:layout_margin="4dp"
        android:background="@color/colorPrimary">


        <ImageView

            android:id="@+id/ivUserIcon"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="18dp"
            android:contentDescription="@string/icon"
            android:src="@drawable/user_icon_1" />

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="265dp"
            android:layout_height="53dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="130dp"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="99dp"
            android:gravity="center"
            android:text="@string/username"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/tvWinTime"
            android:layout_width="259dp"
            android:layout_height="56dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="129dp"
            android:layout_marginTop="87dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="28dp"
            android:gravity="center"
            android:text="@string/wintime"
            android:textSize="40sp" />

    </RelativeLayout>

</LinearLayout>